se carga y actualiza proyecto

--- a/Admin Dashboard #01/index.html
+++ b/Admin Dashboard #01/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Responsive Dashboard Design #1 | AsmrProg</title>
+    <title>Responsive Dashboard Design #1 |Maitodeveloper</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <div class="toggle">
                 <div class="logo">
                     <img src="images/logo.png">
-                    <h2>Asmr<span class="danger">Prog</span></h2>
+                    <h2>Maito<span class="danger">Developer</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
@@ -159,17 +159,17 @@
                     </div>
                     <div class="user">
                         <img src="images/profile-3.jpg">
-                        <h2>Amir</h2>
+                        <h2>Jose</h2>
                         <p>3 Hours Ago</p>
                     </div>
                     <div class="user">
                         <img src="images/profile-4.jpg">
-                        <h2>Ember</h2>
+                        <h2>Daniela</h2>
                         <p>6 Hours Ago</p>
                     </div>
                     <div class="user">
                         <img src="images/plus.png">
-                        <h2>More</h2>
+                        <h2>Maria</h2>
                         <p>New User</p>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
             <div class="user-profile">
                 <div class="logo">
                     <img src="images/logo.png">
-                    <h2>AsmrProg</h2>
+                    <h2>Maitodeveloper/h2>
                     <p>Fullstack Web Developer</p>
                 </div>
             </div>
