--- a/Admin Dashboard #02/index.html
+++ b/Admin Dashboard #02/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Responsive Dashboard Design #2 | AsmrProg</title>
+    <title>Responsive Dashboard Design #2 | Maitodeveloper</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div class="sidebar">
         <a href="#" class="logo">
             <i class='bx bx-code-alt'></i>
-            <div class="logo-name"><span>Asmr</span>Prog</div>
+           <h5> <div class="logo-name"><span>Maito</span>Developer</div></h5>
         </a>
         <ul class="side-menu">
             <li><a href="#"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
@@ -136,7 +136,7 @@
                             <tr>
                                 <td>
                                     <img src="images/profile-1.jpg">
-                                    <p>John Doe</p>
+                                    <p>Jose Mauricio</p>
                                 </td>
                                 <td>14-08-2023</td>
                                 <td><span class="status completed">Completed</span></td>
@@ -144,7 +144,7 @@
                             <tr>
                                 <td>
                                     <img src="images/profile-1.jpg">
-                                    <p>John Doe</p>
+                                    <p>Jose Mauricio</p>
                                 </td>
                                 <td>14-08-2023</td>
                                 <td><span class="status pending">Pending</span></td>
@@ -152,7 +152,7 @@
                             <tr>
                                 <td>
                                     <img src="images/profile-1.jpg">
-                                    <p>John Doe</p>
+                                    <p>Jose Mauricio</p>
                                 </td>
                                 <td>14-08-2023</td>
                                 <td><span class="status process">Processing</span></td>
